--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,18 @@
 # Site settings
-title:
-email:
-description: > # this means to ignore newlines until "baseurl:"
+title: Junghyeon Ahn
+email: ro033026@gmail.com
+description: > 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+linkedin_username: 
+  <p>
+  <a href="https://www.linkedin.com/in/junghyeon-ahn/">Junghyeon Ahn</a>
+</p>
+Instagram_username:  
+  <p>
+  <a href="https://www.instagram.com/hyeon_1998_/">hyeon_1998_</a>
+</p>
 
 # Build settings
 markdown: kramdown
